--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,7 @@
 <body>
   <header>
     <nav>
-      <button class="btn" id="homeToggle">Home</button>
-      <button class="btn" id="menuToggle">Menu</button>
-      <button class="btn" id="aboutToggle">About</button>
+      <h1>Template</h1>
     </nav>
   </header>
 
